# rust-winsvc

./: Cargo.toml  LICENSE  README.md
rust-winsvc-derive/: Cargo.toml
rust-winsvc-derive/src/: lib.rs
src/: lib.rs  main.rs  service.rs  util.rs
